# synapse-project

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  requirements.txt  run.sh  setup.sh  x86Synthesizer.cpp
libsycon/: CMakeLists.txt  README.md  build.sh  install.sh
libsycon/cmake/: find_cli11.cmake  find_dpdk.cmake  find_threads.cmake
libsycon/examples/: buffer.cpp  cached_table_map.cpp  dchain_table.cpp  map_table.cpp  send_to_controller.cpp  simple_table.cpp  table.cpp  table_map.cpp  tna_exact_match.cpp  transient_cached_table_map.cpp  vector_register.cpp  vector_table.cpp
libsycon/include/sycon/: args.h  args.hpp  asic.h  asic.hpp  buffer.h  bytes.h  config.h  config.hpp  constants.h  constants.hpp  externs.h  externs.hpp  field.h  hash.h  log.h  log.hpp  nf_config.h  packet.h  packet.hpp  sycon.h  sycon.hpp  time.h  time.hpp  transactions.h  util.h  util.hpp
libsycon/src/: args.cpp  asic.cpp  config.cpp  config.h  constants.h  packet.cpp  packet.h  packet.hpp  pcie.cpp  setup.cpp  sycon.cpp  time.cpp  transactions.cpp  util.cpp
libsycon/src/data_structures/: count_min_sketch.cpp  hh_table.cpp
libsycon/src/metatables/: device_configuration.h  device_configuration.hpp  port_hdl_info.h  port_hdl_info.hpp  port_stat.h  port_stat.hpp  ports.h  ports.hpp
libsycon/src/modules/: simple_table.cpp
libsycon/src/primitives/: counter.cpp  meta_table.cpp  register.cpp  table.cpp
synapse/: CMakeLists.txt  Dockerfile  README.md  Vagrantfile  build-address-sanitizer.sh  build-debug.sh  build-profiling.sh  build-release.sh  build.sh  docker-compose.yml
synapse/bdds/: adder.gv  bridge.bdd  bridge.gv  cl.bdd  fw.bdd  fw.gv  fwd.bdd  fwd.gv  gallium-fw.bdd  gallium-fw.gv  gallium-lb.bdd  gallium-lb.gv  gallium-proxy.bdd  gallium-proxy.gv  hhh.gv  nat.bdd  psd.gv
synapse/cmake/: find_cli11.cmake  find_curses.cmake  find_gurobi.cmake  find_json.cmake  find_klee.cmake  find_llvm.cmake  find_pcap.cmake  find_threads.cmake  find_tomlplusplus.cmake  find_unwind.cmake  find_z3.cmake  find_zlib.cmake
synapse/cmake/modules/: FindGUROBI.cmake  FindKLEE.cmake  FindZ3.cmake
synapse/dpdk-nfs/: Makefile  nf-util.c  nf.c  nf.h
synapse/dpdk-nfs/adder/: state.c
synapse/dpdk-nfs/gallium-fw/: flow.h  fw_config.c  fw_main.c  loop.c  loop.h  state.h
synapse/dpdk-nfs/gallium-lb/: backend.c  backend.h  flow.h  lb_config.c  lb_manager.c  loop.c  state.c
synapse/dpdk-nfs/gallium-nat/: counter.c  flow.c  flow.h  loop.c  nat_config.c  nat_main.c
synapse/dpdk-nfs/gallium-proxy/: Makefile  backend.c  backend.h
synapse/dpdk-nfs/resize/: loop.h  nop_main.c
synapse/libraries/LibBDD/: BDD.cpp  BDD.h  CMakeLists.txt  CallPath.cpp  CallPath.h  CallPathsGroups.cpp  CallPathsGroups.h  Config.cpp  Config.h  IO.cpp  Profile.cpp  Profile.h  Reorder.cpp  Reorder.h
synapse/libraries/LibClone/: CMakeLists.txt  Device.h  InfrastructureNode.h  Link.cpp  Link.h  NF.h  Network.cpp  Network.h  Node.h  PhysicalNetwork.cpp  PhysicalNetwork.h  Placer.cpp  Placer.h  Port.h
synapse/libraries/LibCore/: CMakeLists.txt  ClusterViz.cpp  ClusterViz.h  Coder.h  Debug.cpp  Debug.h  Expr.cpp  Expr.h  Graphviz.cpp  Graphviz.h  Math.cpp  Math.h  Net.h  Pcap.h  RandomEngine.cpp  RandomEngine.h  Solver.cpp  Solver.h  Strings.h  Symbol.cpp  Symbol.h  SymbolManager.cpp  SymbolManager.h  Synthesizer.cpp  Synthesizer.h  System.cpp  System.h  Template.cpp  Template.h  TrafficGenerator.cpp  TrafficGenerator.h  TreeViz.cpp  TreeViz.h  Types.cpp  Types.h  kQuery.cpp  kQuery.h
synapse/libraries/LibSynapse/: CMakeLists.txt  Context.cpp  Context.h  EPNode.cpp  EPNode.h  ExecutionPlan.cpp  ExecutionPlan.h  GlobalStats.cpp  GlobalStats.h  Meta.cpp  Meta.h  PerfOracle.cpp  PerfOracle.h  Profiler.cpp  Profiler.h  Search.cpp  Search.h  SearchSpace.cpp  SearchSpace.h  Target.cpp  Target.h  Visitor.cpp  Visitor.h
synapse/setup/: sync-deps.sh
synapse/src/: call_paths.cpp  call_paths.h  call_paths.hpp  constants.h  constants.hpp  log.cpp  log.h  pcap.h  pcap.hpp  profiler.cpp  profiler.h  profiler.hpp  random_engine.cpp  random_engine.h  search.cpp  search.h  search.hpp  search_space.cpp  search_space.h  search_space.hpp  system.cpp  system.h  types.h  types.hpp  util.cpp  util.h
synapse/src/bdd/: bdd.cpp  bdd.h  bdd.hpp  call_paths_groups.cpp  call_paths_groups.h  call_paths_groups.hpp  io.cpp  io.h  profile.cpp  profile.h  profile.hpp  reorder.cpp  reorder.h  reorder.hpp  symbex.cpp  symbex.h  symbex.hpp  tree.cpp  tree.h  tree.hpp  visitor.cpp  visitor.h
synapse/src/call_paths/: call_paths.cpp  call_paths.h
synapse/src/execution_plan/: context.cpp  context.h  context.hpp  execution_plan.cpp  execution_plan.h  execution_plan.hpp  meta.cpp  meta.h  meta.hpp  node.cpp  node.h  node.hpp  perf_estimations.cpp  perf_oracle.cpp  perf_oracle.h  perf_oracle.hpp  visitor.cpp  visitor.h  visitor.hpp
synapse/src/exprs/: array_manager.cpp  array_manager.h  exprs.cpp  exprs.h  filter.cpp  kQuery.cpp  kQuery.h  modifications.cpp  printer.cpp  renamer.cpp  renamer.h  replacer.cpp  replacer.h  retriever.cpp  retriever.h  simplifier.cpp  simplifier.h  solver.cpp  solver.h  swap_endianness.cpp  symbol.cpp  symbol.h  symbol_manager.cpp
synapse/src/graphviz/: graphviz.cpp  graphviz.h  graphviz.hpp
synapse/src/heuristics/: bfs.cpp  bfs.h  bfs.hpp  config.h  dfs.cpp  dfs.h  dfs.hpp  ds_pref.cpp  ds_pref.h  ds_pref.hpp  gallium.cpp  gallium.h  (+24 more)
synapse/tools/: bdd-inspector.cpp  bdd-reorder.cpp  bdd-synthesizer.cpp  bdd-visualizer.cpp  call-paths-to-bdd.cpp  graphviz.cpp  kquery-parser.cpp  load-call-paths.cpp  network-consolidator.cpp  network-placer.cpp  newton-roots-finder.cpp  pcap-generator-cl.cpp  pcap-generator-echo.cpp  pcap-generator-fw.cpp  pcap-generator-fwd.cpp  pcap-generator-kvs.cpp  pcap-generator-nat.cpp  pcap-generator-nop.cpp  pcap-generator-psd.cpp  pcap-simplify.cpp  pcap-split-ports.cpp  pcap-stats.cpp  profiler-tester.cpp  simple-placer-solver.cpp  solver.cpp  synapse.cpp  tna-placer.cpp  treeviz.cpp
tofino/libsycon/: .clang-format  .gitignore  CMakeLists.txt  install.sh
(+6402 files in other folders)
